--- a/src/Component/CardAdkhar/CardAdkharS.module.css
+++ b/src/Component/CardAdkhar/CardAdkharS.module.css
@@ -51,7 +51,7 @@
   .Card-info .counter-buttom {
     margin-top: 10px;
     color: black;
-    width: 100%;
+    width: 50px;
     height: 50px;
     overflow: hidden;
     border-radius: 100px;
