--- a/src/Component/CardAdkhar/CardAdkharS.module.css
+++ b/src/Component/CardAdkhar/CardAdkharS.module.css
@@ -37,7 +37,7 @@
     font-family: Arial, Helvetica, sans-serif, Helvetica, sans-serif;
     font-size: large;
     font-weight:bold;
-    color: red;
+    color: rgb(20, 27, 225);
     margin: 5px 0px ;
   }
 
