--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,8 @@
     margin: 80px 0 20px 10px;
     text-align: center;
    min-height: 400px;
+   align-items: center;
+    align-content: space-evenly;
 }
 
 
