--- a/src/Component/CardMenu/CardMenu.module.css
+++ b/src/Component/CardMenu/CardMenu.module.css
@@ -1,25 +1,27 @@
 .Card-info{
     width: 250PX;
-    height: 250px;
+    min-height: 250px;
     border: 1px solid black ;
     border-radius: 100px;
     box-shadow:  5px 5px 5px hsla(0, 0%, 0%, 0.433);
-   text-align: center;
-   margin: 5px;
-   display: inline-block;
-   padding: 10px;
-   background-image: url(../../assets/Pictures/flat-arabic-pattern-background_79603-1826.avif);
+    text-align: center;
+    align-content: space-evenly;
+ 
+    margin: 5px;
+    display: inline-block;
+    padding: 10px;
+    background-image: url(../../assets/Pictures/flat-arabic-pattern-background_79603-1826.avif);
   }
   
   .Card-info a {
     font-family: Arial, Helvetica, sans-serif, Helvetica, sans-serif;
     font-size: large;
     font-style: none;
-    height: 90px;
-    margin: 15px 0 0 0;
+    
     text-decoration: none;
     
-    
+    overflow: hidden;
+
     text-overflow: ellipsis;
   }
   
@@ -27,8 +29,8 @@
 
   .Card-info h1 {
     color: black;
-    height: 90px;
-    /* white-space: nowrap; */
+    
+   
     overflow: hidden;
     text-overflow: ellipsis;
   }
@@ -42,9 +44,6 @@
     font-family: Arial, Helvetica, sans-serif, Helvetica, sans-serif;
     font-size: X-large;
   
-    margin: 15px 0 0 0;
-
-    white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
   }
