--- a/src/Component/Header/Header.css
+++ b/src/Component/Header/Header.css
@@ -66,7 +66,7 @@
     font-size: 40px;
     border: none;
     background: none;
-    background-image: url("../../assets/Pictures/icons8-line-width-48.png");
+    background-image: url("../../assets/Pictures/burger.png");
     background-repeat: no-repeat;
     background-position: center;
     outline: none;
