--- a/src/Pages/Adkhar/Adkharstyle.module.css
+++ b/src/Pages/Adkhar/Adkharstyle.module.css
@@ -1,6 +1,9 @@
 .continer-div {
-    display: flex;
-    align-items: center;
-    flex-wrap: wrap;
-    justify-content: center;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: flex-start; 
+  gap: 20px; 
+  padding: 20px;
+  box-sizing: border-box;
 }
