--- a/src/Component/Card/CardS.module.css
+++ b/src/Component/Card/CardS.module.css
@@ -1,15 +1,23 @@
-.Card-info{
-    width: 250PX;
-    height: 250px;
-    border: 1px solid black ;
-    border-radius: 100px;
-    box-shadow:  5px 5px 5px hsla(0, 0%, 0%, 0.433);
-   text-align: center;
-   margin: 5px;
-   display: inline-block;
-   padding: 10px;
-   background-image: url(../../assets/Pictures/flat-arabic-pattern-background_79603-1826.avif);
-  }
+.Card-info {
+  width: 250px;
+  height: 250px;
+  border: 1px solid black;
+  border-radius: 100px;
+  box-shadow: 5px 5px 5px hsla(0, 0%, 0%, 0.433);
+  margin: 5px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center; /* للتوسيط العمودي */
+  align-items: center;     /* للتوسيط الأفقي */
+  padding: 10px;
+  background-image: url(../../assets/Pictures/flat-arabic-pattern-background_79603-1826.avif);
+  background-size: cover;
+  background-position: center;
+  text-align: center;
+  box-sizing: border-box;
+  
+}
+
   
   .Card-info a {
     font-family: Arial, Helvetica, sans-serif, Helvetica, sans-serif;
