--- a/src/Component/CardMenu/CardMenu.module.css
+++ b/src/Component/CardMenu/CardMenu.module.css
@@ -1,63 +1,37 @@
-.Card-info{
-    width: 250PX;
-    min-height: 250px;
-    border: 1px solid black ;
-    border-radius: 100px;
-    box-shadow:  5px 5px 5px hsla(0, 0%, 0%, 0.433);
-    text-align: center;
-    align-content: space-evenly;
- 
-    margin: 5px;
-    display: inline-block;
-    padding: 10px;
-    background-image: url(../../assets/Pictures/flat-arabic-pattern-background_79603-1826.avif);
-  }
-  
-  .Card-info a {
-    font-family: Arial, Helvetica, sans-serif, Helvetica, sans-serif;
-    font-size: large;
-    font-style: none;
-    
-    text-decoration: none;
-    
-    overflow: hidden;
+.Card-info {
+  width: 250px;
+  min-height: 250px;
+  border: 1px solid black;
+  border-radius: 100px;
+  box-shadow: 5px 5px 5px hsla(0, 0%, 0%, 0.433);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 10px;
+  text-align: center;
+  background-image: url(../../assets/Pictures/flat-arabic-pattern-background_79603-1826.avif);
+  background-size: cover;
+  background-position: center;
+  box-sizing: border-box;
+}
 
-    text-overflow: ellipsis;
-  }
-  
- 
+.title {
+  font-size: 2rem;
+  font-family: Arial, Helvetica, sans-serif;
+  color: black;
+  margin: 0;
+  padding: 0 10px;
+  white-space: normal;
+  overflow-wrap: break-word;
+  word-break: break-word;
+  text-align: center;
+  width: 100%;
+}
 
-  .Card-info h1 {
-    color: black;
-    
-   
-    overflow: hidden;
-    text-overflow: ellipsis;
-  }
-  .Card-info h1:hover {
-    color: red;
-   
-    overflow: hidden;
-    text-overflow: ellipsis;
-  }
-  .Card-info .title {
-    font-family: Arial, Helvetica, sans-serif, Helvetica, sans-serif;
-    font-size: X-large;
-  
-    overflow: hidden;
-    text-overflow: ellipsis;
-  }
-  
-  
-  .Card-info .image:hover {
-    opacity: 0.9 ;
-    
-  }
-
-  .Card-info .description {
-    font-family: Arial, Helvetica, sans-serif, Helvetica, sans-serif;
-    font-size: large;
-    font-weight:bold;
-    color: red;
-    margin: 0 0 0px 0;
-  }
+.title a {
+  text-decoration: none;
+  color: inherit;
+  display: inline-block;
+  width: 100%;
+}
