--- a/src/Component/ListNameOfAllh/ListNames.module.css
+++ b/src/Component/ListNameOfAllh/ListNames.module.css
@@ -1,9 +1,13 @@
-.paging-continer{
-    margin-top: 10px;
-   
-    
-    
+.container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center; /* توسيط البطاقات أفقياً */
+  gap: 15px;
+  padding: 20px;
 }
+
+
+
 .paging-button{
     font-size: 2.5rem;
     padding: 5px;
